--- a/haskell/aoc25litfill.cabal
+++ b/haskell/aoc25litfill.cabal
@@ -23,3 +23,11 @@ executable day01
     build-depends:    base ^>=4.21.0.0, mtl
     hs-source-dirs:   day01
     default-language: GHC2024
+
+executable day02
+    import:           warnings
+    main-is:          Main.hs
+    build-depends:    base ^>=4.21.0.0, split, text
+    hs-source-dirs:   day02
+    default-language: GHC2024
+
