--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,3 +13,11 @@ path = "src/day01/main.rs"
 [[bin]]
 name = "day02"
 path = "src/day02/main.rs"
+
+[[bin]]
+name = "day03"
+path = "src/day03/main.rs"
+
+[[bin]]
+name = "day04"
+path = "src/day04/main.rs"
